force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Account__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional relationship to account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chat Transcript</relationshipLabel>
    <relationshipName>Chat_Transcript</relationshipName>
    <type>Lookup</type>
</CustomField>