force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Case__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional relationship to case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Chat Transcript</relationshipLabel>
    <relationshipName>Chat_Transcript</relationshipName>
    <type>Lookup</type>
</CustomField>