force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Chat_End_Time__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Chat_End_Time__c</fullName>
    <description>Datetime chat was ended</description>
    <label>Chat End Time</label>
    <type>DateTime</type>
</CustomField>