force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Chat_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Chat_Number__c</fullName>
    <description>Unique chat id number from LivePerson system</description>
    <externalId>true</externalId>
    <label>Chat Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>