force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Chat_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Chat_Start_Time__c</fullName>
    <description>Datetime chat was initiated</description>
    <label>Chat Start Time</label>
    <type>DateTime</type>
</CustomField>