force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Contact__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional relationship to contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Chat Transcript</relationshipLabel>
    <relationshipName>Chat_Transcript</relationshipName>
    <type>Lookup</type>
</CustomField>