force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Interactive__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Interactive__c</fullName>
    <description>The Customer had participated in this chat.</description>
    <label>Interactive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>