force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Lead__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional relationship to lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Chat Transcript</relationshipLabel>
    <relationshipName>Chat_Transcript</relationshipName>
    <type>Lookup</type>
</CustomField>