force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__LivePerson_SDK_API_Type__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__LivePerson_SDK_API_Type__c</fullName>
    <description>Describes which channel the Chat was initiated on</description>
    <label>LivePerson SDK API Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Messaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>