force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional relationship to opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Chat Transcript</relationshipLabel>
    <relationshipName>Chat_Transcript</relationshipName>
    <type>Lookup</type>
</CustomField>