force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__SDE_Gender__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__SDE_Gender__c</fullName>
    <label>SDE Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>