force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__SDE_Name__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__SDE_Name__c</fullName>
    <label>SDE Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>