force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Status__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Status__c</fullName>
    <description>Current Status of Chat</description>
    <label>Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>