force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Test__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Test__c</fullName>
    <label>Test(DO NOT PACKAGE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>