force-app/main/default/objects/LiveEngage__Chat_Transcript__c/fields/LiveEngage__Transcript__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Transcript__c</fullName>
    <description>Copy of the LiveEngage Chat log</description>
    <label>Transcript</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>