force-app/main/default/objects/LiveEngage__Chat_Transcript__c/listViews/LiveEngage__All.listView-meta.xml
<ListView>
    <fullName>LiveEngage__All</fullName>
    <columns>NAME</columns>
    <columns>LiveEngage__Chat_Number__c</columns>
    <columns>LiveEngage__LivePerson_SDK_API_Type__c</columns>
    <columns>LiveEngage__Chat_Start_Time__c</columns>
    <columns>LiveEngage__Chat_End_Time__c</columns>
    <columns>LiveEngage__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LiveEngage__Account__c</columns>
    <columns>LiveEngage__Contact__c</columns>
    <columns>LiveEngage__Case__c</columns>
    <columns>LiveEngage__Lead__c</columns>
    <columns>LiveEngage__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>