force-app/main/default/objects/LiveEngage__Chat_Transcript__c/listViews/LiveEngage__Recent_Detailed.listView-meta.xml
<ListView>
    <fullName>LiveEngage__Recent_Detailed</fullName>
    <columns>NAME</columns>
    <columns>LiveEngage__LivePerson_SDK_API_Type__c</columns>
    <columns>LiveEngage__Account__c</columns>
    <columns>LiveEngage__Case__c</columns>
    <columns>LiveEngage__Chat_End_Time__c</columns>
    <columns>LiveEngage__Chat_Number__c</columns>
    <columns>LiveEngage__Chat_Start_Time__c</columns>
    <columns>LiveEngage__Contact__c</columns>
    <columns>LiveEngage__Interactive__c</columns>
    <columns>LiveEngage__Lead__c</columns>
    <columns>LiveEngage__Opportunity__c</columns>
    <columns>LiveEngage__Status__c</columns>
    <columns>LiveEngage__Transcript__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Recent - Detailed</label>
</ListView>